--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/login-action@v1  # you can existing action for particular task
         with:
           username: ${{ secrets.DOCKERHUB_USER_NAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout  
         uses: actions/checkout@v2  #provided by github for checking out the code
       - name: Test
