--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1  # you can existing action for particular task
         with:
-          username: ${{ secrets.DOCKERHUB_USER_NAME }}
+          username: ${{ secrets.DOCKERHUB_USER_NAME }} # we logged in docker hub because there is limit on number of pulls from docker hub
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout  
         uses: actions/checkout@v2  #provided by github for checking out the code
       - name: Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
       
