--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,6 +21,6 @@ jobs:
         uses: actions/checkout@v2  #provided by github for checking out the code
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
-      - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+      # - name: Lint
+      #   run: docker-compose run --rm app sh -c "flake8"
       
